- [terryso/269448b..849de6a] == [littlecodersh#829]
  修复bug: 状态码为408或者400, 需要重新扫码; 隔一秒再检查登录状态
- [huodongdong/0c56f1d] == [littlecodersh#769]
  fix upload_chuck_file fileName quote
- [wolfsilver/7a1919d] == [littlecodersh#792]
  Fix 不能获取公众号头像
- [oneonion/60947ad] == [littlecodersh#797]
  Fix 导入itchat的时候会打印黑色字符
- ~~[luvletter2333/9c49b4a] == [littlecodersh#935]~~
  ~~UOS patch~~


Changes from Eana Hufwe
-----------------------

- Download multiple files in batch will produce duplicated contents, [ews#30]
- Download multiple videos in batch will produce duplicated contents
- Raise `ConnectionError` instead of exit when failed to connect at beginning, [ews#50]
- Add thread names to threads
- Add type hints (partially)
- Remove Python 2 compatibility code
- Safely overwrite session file to mitigate loss of data caused by improper termination
- ~~Refactor error detection for UOS patch~~
- Log response when account token fetched is not a valid JSON
- Fail hot reload early by inspecting sync status upfront


[jjkkoo/ea0704f]: https://github.com/littlecodersh/ItChat/commit/ea0704ffbd814f888fbe48109bd764541807e523
[terryso/269448b..849de6a]: https://github.com/littlecodersh/ItChat/commit/849de6af022f6dfeef9a0334bea617df09681fea
[littlecodersh#829]: https://github.com/littlecodersh/ItChat/pull/829
[huodongdong/0c56f1d]: https://github.com/littlecodersh/ItChat/commit/0c56f1d314f643c3504e30a404e42945cf7df66f
[littlecodersh#769]: https://github.com/littlecodersh/ItChat/pull/769
[wolfsilver/7a1919d]: https://github.com/littlecodersh/ItChat/commit/7a1919d59d961d3a6a8ca84e7973dd97356800eb
[oneonion/60947ad]: https://github.com/ONEONION/ItChat/commit/60947adc1a7493f1a113d130d02d4a51f9cc54c5
[littlecodersh#797]: https://github.com/littlecodersh/ItChat/pull/797
[luvletter2333/9c49b4a]: https://github.com/luvletter2333/ItChat/commit/9c49b4a5c36842003a48097694bcb3bd13f6e96d
[littlecodersh#935]: https://github.com/littlecodersh/ItChat/pull/935
[ews#30]: https://ews.1a23.studio/issues/30